Bug squashing
Fix an issue where you couldn't edit/add properly when index was 0
Fix an issue where modal would get stuck in edit mode
Fix an issue where shared items weren't distribbuting costs appropriately

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -125,6 +125,9 @@ ion-content {
 .items-tabs-item div {
   white-space: normal;
 }
+.items-tabs-item .cost-per-person {
+  white-space: nowrap;
+}
 .tax-and-tip .blue-underscore-input {
   width: 100px;
   text-align: right;
